{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 96,
  "lineage": "54b6c36e-988a-2500-db84-4d71c7c5737a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0011a52cecfa1de67",
            "domain": "vpc",
            "id": "eipalloc-088ecf4d6ef11ade9",
            "instance": "i-07b48394a6ccf4738",
            "network_interface": "eni-0dac6e030ac428b43",
            "private_dns": "ip-10-0-3-159.ec2.internal",
            "private_ip": "10.0.3.159",
            "public_dns": "ec2-3-231-52-24.compute-1.amazonaws.com",
            "public_ip": "3.231.52.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.NAT_Instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Global_Instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:818652482165:instance/i-0c0a7e2103dbefbcd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c0a7e2103dbefbcd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "essentialskp",
            "monitoring": false,
            "primary_network_interface_id": "eni-05cef1c677b1ca618",
            "private_dns": "ip-10-0-4-187.ec2.internal",
            "private_ip": "10.0.4.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e5474f1253318d09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05d1d7a8c288458f5",
            "tags": {
              "Name": "Global_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096b406fb63d957c9"
            ]
          },
          "depends_on": [
            "aws_security_group.NAT_SG",
            "aws_subnet.us-east-1b-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "NAT_Instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9d4a05375b2763",
            "arn": "arn:aws:ec2:us-east-1:818652482165:instance/i-07b48394a6ccf4738",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07b48394a6ccf4738",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "essentialskp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0dac6e030ac428b43",
            "private_dns": "ip-10-0-3-159.ec2.internal",
            "private_ip": "10.0.3.159",
            "public_dns": "ec2-54-172-249-59.compute-1.amazonaws.com",
            "public_ip": "54.172.249.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0c1645f41af73b544",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0773a460458899f1a",
            "tags": {
              "Name": "NAT_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096b406fb63d957c9"
            ]
          },
          "depends_on": [
            "aws_security_group.NAT_SG",
            "aws_subnet.us-east-1b-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bf6f1171ce74a878",
            "owner_id": "818652482165",
            "vpc_id": "vpc-03310ccd7c8c3ed26"
          },
          "depends_on": [
            "aws_vpc.Project_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-1b-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09b2c1911e3069d36",
            "owner_id": "818652482165",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-07b48394a6ccf4738",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-03310ccd7c8c3ed26"
          },
          "depends_on": [
            "aws_instance.NAT_Instance",
            "aws_vpc.Project_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-east-1b-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-012d43a49d5025009",
            "owner_id": "818652482165",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf6f1171ce74a878",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-03310ccd7c8c3ed26"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.Project_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1b-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b881865520f26b",
            "route_table_id": "rtb-09b2c1911e3069d36",
            "subnet_id": "subnet-05d1d7a8c288458f5"
          },
          "depends_on": [
            "aws_route_table.us-east-1b-private",
            "aws_subnet.us-east-1b-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-1b-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041a705767984cca7",
            "route_table_id": "rtb-012d43a49d5025009",
            "subnet_id": "subnet-0773a460458899f1a"
          },
          "depends_on": [
            "aws_route_table.us-east-1b-public",
            "aws_subnet.us-east-1b-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "NAT_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818652482165:security-group/sg-096b406fb63d957c9",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-096b406fb63d957c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "818652482165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NAT_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03310ccd7c8c3ed26"
          },
          "depends_on": [
            "aws_vpc.Project_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1b-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818652482165:subnet/subnet-05d1d7a8c288458f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05d1d7a8c288458f5",
            "map_public_ip_on_launch": false,
            "owner_id": "818652482165",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-03310ccd7c8c3ed26"
          },
          "depends_on": [
            "aws_vpc.Project_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-1b-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818652482165:subnet/subnet-0773a460458899f1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0773a460458899f1a",
            "map_public_ip_on_launch": false,
            "owner_id": "818652482165",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-03310ccd7c8c3ed26"
          },
          "depends_on": [
            "aws_vpc.Project_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:818652482165:vpc/vpc-03310ccd7c8c3ed26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e57957159ecf27a3",
            "default_route_table_id": "rtb-069819e93f960b0b5",
            "default_security_group_id": "sg-06df15eaafc91fb23",
            "dhcp_options_id": "dopt-c1ccfcba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03310ccd7c8c3ed26",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069819e93f960b0b5",
            "owner_id": "818652482165",
            "tags": {
              "Name": "Project_VPC"
            }
          }
        }
      ]
    }
  ]
}